<resources>
    <string name="app_name">Droid Cafe Input</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="description_donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="description_icecream">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="description_froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="name_label_text">Name</string>
    <string name="address_label_text">Address</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="enter_address_hint">Enter your address</string>
    <string name="phone_label_text">Phone</string>
    <string name="note_label_text">Note</string>
    <string name="enter_phone_hint">Enter your phone number</string>
    <string name="enter_note_hint">Anything else? Give us a note.</string>
    <string name="delivery_label_text">Choose your delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
</resources>
